--- a/index.html
+++ b/index.html
@@ -143,6 +143,22 @@
             padding: 2px 5px;
             pointer-events: none;
         }
+
+        /* Sparkles Background Effect */
+        .sparkle {
+            position: absolute;
+            background: white;
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 2;
+            filter: blur(1px);
+            animation: sparkle-fade 3s infinite ease-in-out;
+        }
+
+        @keyframes sparkle-fade {
+            0%, 100% { opacity: 0; transform: scale(0); }
+            50% { opacity: 0.8; transform: scale(1); }
+        }
     </style>
     
     <style>
@@ -169,7 +185,7 @@
     <div id="canvas-container"></div>
 
     <div id="ui-layer">
-        <h1>BIN NA RECAP 2025</h1>
+        <h1>CHUỘT CỐNG BÁNH GẠO RECAP 2025</h1>
         
         <div class="controls-wrapper">
             <div class="btn-group">
@@ -830,6 +846,26 @@
         }
 
         init();
+    </script>
+    <script>
+        // Generate sparkles for background
+        function createSparkles() {
+            const count = 80;
+            const container = document.body;
+            for (let i = 0; i < count; i++) {
+                const sparkle = document.createElement('div');
+                sparkle.className = 'sparkle';
+                const size = Math.random() * 3 + 1;
+                sparkle.style.width = `${size}px`;
+                sparkle.style.height = `${size}px`;
+                sparkle.style.left = `${Math.random() * 100}vw`;
+                sparkle.style.top = `${Math.random() * 100}vh`;
+                sparkle.style.animationDelay = `${Math.random() * 3}s`;
+                sparkle.style.backgroundColor = Math.random() > 0.5 ? '#fff' : '#ffd700';
+                container.appendChild(sparkle);
+            }
+        }
+        createSparkles();
     </script>
 </body>
 </html>
